--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 clap = { version = "4.5.7", features = ["derive"] }
 clipboard = "0.5.0"
 colored = "2.1.0"
+home = "0.5.9"
 inquire = "0.7.5"
 reqwest = { version = "0.12.5", features = ["blocking"] }
 serde = { version = "1.0.203", features = ["derive"] }
