--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,15 @@ edition = "2021"
 clap = { version = "4.5.7", features = ["derive"] }
 clipboard = "0.5.0"
 colored = "2.1.0"
+# diesel = { version = "2.2.1", features = ["sqlite"] }
 home = "0.5.9"
 httpmock = "0.7.0"
 inquire = "0.7.5"
 reqwest = { version = "0.12.5", features = ["blocking"] }
+rusqlite = { version = "0.31.0", features = ["bundled"] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
+# sqlite-vec = "0.0.1-alpha.10"
 thiserror = "1.0.61"
 tokio = "1.38.0"
 
