--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,15 +4,18 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.38"
 clap = { version = "4.5.7", features = ["derive"] }
 clipboard = "0.5.0"
 colored = "2.1.0"
+const_format = "0.2.32"
 home = "0.5.9"
 httpmock = "0.7.0"
 inquire = "0.7.5"
 reqwest = { version = "0.12.5", features = ["blocking"] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
+simsimd = "4.4.0"
 thiserror = "1.0.61"
 tokio = "1.38.0"
 
