--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ const_format = "0.2.32"
 home = "0.5.9"
 httpmock = "0.7.0"
 inquire = "0.7.5"
+openai-api-rs = "4.1.1"
 reqwest = { version = "0.12.5", features = ["blocking"] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
