--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ clap = { version = "4.5.7", features = ["derive"] }
 clipboard = "0.5.0"
 colored = "2.1.0"
 const_format = "0.2.32"
+dyn-clone = "1.0.17"
 home = "0.5.9"
 httpmock = "0.7.0"
 inquire = "0.7.5"
