--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ simsimd = "4.4.0"
 thiserror = "1.0.61"
 tokio = "1.38.0"
 openai-api-rs = { version = "4.1.1", optional = true }
+sysinfo = "0.30.12"
 
 [dev-dependencies]
 chrono = "0.4.38"
