--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,15 +41,15 @@ lto = "thin"
 # The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
 cargo-dist-version = "0.16.0"
 # The installers to generate for each app
-installers = []
+installers = ["shell", "powershell"]
 # Target platforms to build apps for (Rust target-triple syntax)
-targets = [
-	"aarch64-apple-darwin",
-	"x86_64-apple-darwin",
-	"x86_64-unknown-linux-gnu",
-	"x86_64-pc-windows-msvc",
-]
+targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
 # CI backends to support
 ci = "github"
 # Publish jobs to run in CI
 pr-run-mode = "plan"
+# Whether to install an updater program
+install-updater = false
+
+[workspace.metadata.dist.dependencies.apt]
+libxcb-xfixes0-dev = "*"
