Fix pattern for release branches in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: "PR"
 
 on:
   push:
-    branches: [main, release-*]
+    branches: [main, release/*]
   pull_request:
-    branches: [main, release-*]
+    branches: [main, release/*]
 
 jobs:
   test:
