--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ cargo-dist-version = "0.16.0"
 # The installers to generate for each app
 installers = ["shell", "powershell", "homebrew"]
 # A GitHub repo to push Homebrew formulas to
-tap = "guywaldman/homebrew-top"
+tap = "guywaldman/homebrew-tap"
 # Publish jobs to run in CI
 publish-jobs = ["homebrew"]
 # Target platforms to build apps for (Rust target-triple syntax)
