--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,28 +6,21 @@ homepage = "https://github.com/guywaldman/magic-cli"
 repository = "https://github.com/guywaldman/magic-cli"
 edition = "2021"
 
-[features]
-default = ["ollama", "openai"]
-ollama = []
-openai = ["dep:openai-api-rs"]
-
 [dependencies]
 chrono = "0.4.38"
 clap = { version = "4.5.7", features = ["derive"] }
 clipboard = "0.5.0"
 colored = "2.1.0"
 const_format = "0.2.32"
-dyn-clone = "1.0.17"
+orch = "0.0.3"
 home = "0.5.9"
 httpmock = "0.7.0"
 inquire = "0.7.5"
-reqwest = { version = "0.12.5", features = ["blocking"] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 simsimd = "4.4.0"
 thiserror = "1.0.61"
 tokio = "1.38.0"
-openai-api-rs = { version = "4.1.1", optional = true }
 sysinfo = "0.30.12"
 
 [dev-dependencies]
@@ -49,7 +42,12 @@ tap = "guywaldman/homebrew-tap"
 # Publish jobs to run in CI
 publish-jobs = ["homebrew"]
 # Target platforms to build apps for (Rust target-triple syntax)
-targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
+targets = [
+	"aarch64-apple-darwin",
+	"x86_64-apple-darwin",
+	"x86_64-unknown-linux-gnu",
+	"x86_64-pc-windows-msvc",
+]
 # CI backends to support
 ci = "github"
 # Publish jobs to run in CI
