--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       fail-fast: true
       matrix:
         target: [x86_64-unknown-linux-gnu, aarch64-unknown-linux-gnu]
-    name: cargo test
+    name: Unit tests
     runs-on: ubuntu-latest
     steps:
       - run: |
@@ -36,8 +36,25 @@ jobs:
           target: ${{ matrix.target }}
       - run: cargo test --all-features
 
+  integration-test:
+    strategy:
+      fail-fast: true
+      matrix:
+        target: [x86_64-unknown-linux-gnu, aarch64-unknown-linux-gnu]
+        python-version: ["3.10"]
+    name: Integration tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Run integration tests
+        run: python 
+
   formatting:
-    name: cargo fmt
+    name: Formatting and linting
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
