--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,8 +50,13 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m venv venv && source venv/bin/activate
+          pip install -r requirements.txt
       - name: Run integration tests
-        run: python 
+        run: |
+          python -m pytest -s
 
   formatting:
     name: Formatting and linting
