--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,7 @@ jobs:
           pip install -r requirements.txt
       - name: Run integration tests
         run: |
+          source venv/bin/activate
           python -m pytest -s
 
   formatting:
