--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,13 +40,13 @@ jobs:
           target: ${{ matrix.target }}
       - run: cargo test --all-features
 
-  integration-test:
+  e2e-tests:
     strategy:
       fail-fast: true
       matrix:
         target: [x86_64-unknown-linux-gnu, aarch64-unknown-linux-gnu]
         python-version: ["3.10"]
-    name: Integration tests
+    name: E2E tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
