--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   check-dnc:
-    name: check-dnc
+    name: DNC comments
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -72,8 +72,8 @@ jobs:
         env:
           OPENAI_API_KEY_E2E: ${{ secrets.OPENAI_API_KEY_E2E }}
 
-  formatting:
-    name: Formatting and linting
+  linting:
+    name: Linting and formatting
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -82,10 +82,6 @@ jobs:
           components: rustfmt
       - name: Rustfmt Check
         uses: actions-rust-lang/rustfmt@v1
-
-  linting:
-    runs-on: ubuntu-latest
-    steps:
       - uses: actions/checkout@v4
       - name: Run Clippy
         run: cargo clippy --all-targets --all-features
