--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,8 @@ repository = "https://github.com/guywaldman/magic-cli"
 edition = "2021"
 
 [dependencies]
-orch = { version = "0.0.13" }
-# Note: This is currently a dependency which could be inside `orch` (see https://github.com/guywaldman/orch/issues/10).
-orch_response = { version = "0.0.13" }
+orch = { version = "0.0.15" }
+orch_response = { version = "0.0.15" }                 # Will be bundled inside `orch` (#10)
 chrono = "0.4.38"
 clap = { version = "4.5.7", features = ["derive"] }
 clipboard = "0.5.0"
