Add UT & improve tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,8 +66,8 @@ jobs:
       - name: Run E2E tests
         run: ./scripts/e2e-tests.sh
         env:
-          OPENAI_API_KEY_E2E: ${{ secrets.OPENAI_API_KEY_E2E }}
-          ANTHROPIC_API_KEY_E2E: ${{ secrets.ANTHROPIC_API_KEY_E2E }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY_E2E }}
+          ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY_E2E }}
 
   linting:
     name: Linting and formatting
