Add Anthropic as an LLM provider (#35)
* Bump `orch` to `0.0.16`

* Add Anthropic & configuration

* Add UT & improve tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,7 @@ jobs:
         run: ./scripts/e2e-tests.sh
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY_E2E }}
+          ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY_E2E }}
 
   linting:
     name: Linting and formatting
